# Nexus

./: .bandit  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_VERSIONING.md  Dockerfile  Makefile  README.md  TEST_RESULTS.md  bandit-report.json  docker-compose.yml  main.py  mkdocs-dev.yml  mkdocs-v0.1.0.yml  mkdocs-v0.yml  mkdocs-v2.0.0.yml  mkdocs.yml  nexus_config.yaml  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  versions.txt
.githooks/: README.md  pre-commit  setup.ps1  setup.sh
.github/: TROUBLESHOOTING.md  WINDOWS_FIXES.md  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-test-pypi.yml  ci.yml  docs.yml  main.yml  publish.yml  release.yml  test-pypi.yml  test.yml
.zed/: debug.json  settings.json  tasks.json
app/: main.py
app/nexus/: __init__.py  config.py  middleware.py  monitoring.py  plugins.py
app/plugins/auth_advanced/: manifest.json  plugin.py  pyproject.toml  requirements.txt
app/plugins/example/hello_world/: manifest.json  requirements.txt
app/plugins/task_manager/: manifest.json  plugin.py  pyproject.toml  requirements.txt
config/: database_examples.yaml
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  PLUGIN_DEVELOPMENT.md  README.md  TESTING.md  TUTORIAL.md  documentation-guide.md  index.html  index.md  versions.json
docs/api/: plugins.md
docs/deployment/: README.md
docs/dev/: ai-agents-documentation-guide.md  index.md
docs/dev/getting-started/: installation.md
docs/getting-started/: configuration.md  first-plugin.md  installation.md  quickstart.md
docs/guides/: README.md  plugins.md
docs/javascripts/: mermaid.js
docs/plugins/: basics.md  hot-swap.md
docs/stylesheets/: extra.css
docs/v2.0.0/: index.md
examples/: README.md  complete_app.py  pyproject.toml  requirements.txt
file_storage/Documents/: README.md  sample.txt
file_storage/Projects/: project_info.json
nexus/: __init__.py  admin.py  api.py  app.py  auth.py  cli.py  config.py  core.py  database.py  factory.py  hot_reload.py  middleware.py  monitoring.py  plugins.py  utils.py
nexus-framework/: DOCUMENTATION_STRUCTURE.md  README.md
nexus-framework/docs/: AGENTS.md  BEST_PRACTICES.md  COMMUNITY.md  DEPLOYMENT.md  DOCUMENTATION_UPDATES.md  INDEX.md  INSTALLATION.md  PACKAGE_DISTRIBUTION.md  PACKAGE_STATUS.md  PLUGIN_DEVELOPMENT.md  POETRY_GUIDE.md  README.md
nexus-framework/examples/: README.md  complete_app.py
nexus-framework/src/app/nexus/: admin.py  api.py  cli.py
nexus/routes/: __init__.py  core.py  debug.py  events.py  plugins.py  ui.py
nexus/ui/: __init__.py  templates.py
nexus/ui/components/: __init__.py  base.py  data.py  feedback.py  forms.py  layouts.py  navigation.py  utils.py
nexus/ui/static/css/: nexus-ui.css
nexus/ui/static/js/: nexus-debug.js
nexus/ui/templates/: component_showcase.html  debug_interface.html
nexus/ui/templates/chat/admin/: dashboard.html
plugin_template/: README.md  manifest.json  plugin.py  pyproject.toml  requirements.txt
plugins/: __init__.py
plugins/analytics/: __init__.py
plugins/analytics/analytics_dashboard/: README.md  manifest.json  plugin.py
plugins/business/: __init__.py
plugins/business/my_awesome_plugin/: README.md  manifest.json  plugin.py
plugins/business/user_management/: README.md  __init__.py  manifest.json  models.py  plugin.py  plugin_old.py  routes.py  services.py
plugins/business/user_management/templates/: dashboard.html
plugins/communication/: __init__.py
plugins/communication/chat/: __init__.py  manifest.json  models.py  plugin_old.py  routes.py  services.py  websocket_manager.py
plugins/communication/chat/templates/: chat.html
plugins/core/: __init__.py
plugins/core/security/: __init__.py  manifest.json  plugin.py  plugin_old.py
plugins/core/security/templates/: dashboard.html  login.html
plugins/custom/: __init__.py
plugins/custom/file_manager/: README.md  manifest.json  plugin.py
plugins/custom/hello_world/: README.md  __init__.py  manifest.json  plugin.py
plugins/custom/test_plugin/: README.md  manifest.json  plugin.py
plugins/example/: __init__.py
plugins/example/hello_world/: __init__.py  manifest.json  plugin.py
plugins/integration/: __init__.py
plugins/integration/api_gateway/: README.md  manifest.json  plugin.py
plugins/security/: __init__.py
plugins/security/security_center/: README.md  __init__.py  manifest.json  plugin.py
plugins/shared/: __init__.py
plugins/shared/common/: __init__.py  auth.py  database.py  decorators.py  models.py  validators.py
plugins/ui/: __init__.py
plugins/ui/dashboard_widgets/: README.md  manifest.json  plugin.py
scripts/: README.md  check_services.py  pre-push-check.bat  pre-push-check.sh  pre_push_check.py  test_ci_locally.py
scripts/docs/: README.md  manage_versions.py  release.sh  serve.sh
tests/: __init__.py  conftest.py
tests/integration/: test_basic_integration.py
tests/unit/: test_admin.py  test_api.py  test_auth.py  test_basic.py  test_cli.py  test_config.py  test_core.py  test_middleware.py  test_monitoring.py  test_plugins.py  test_utils.py
