[tool.poetry]
name = "nexus-plugin-auth-advanced"
version = "2.0.0"
description = "Advanced authentication and authorization plugin for Nexus Framework"
authors = ["Nexus Team <team@nexus-framework.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://nexus-framework.dev/plugins/auth-advanced"
repository = "https://github.com/nexus-framework/plugin-auth-advanced"
documentation = "https://docs.nexus-framework.dev/plugins/auth-advanced"
keywords = [
    "nexus-plugin",
    "authentication",
    "authorization",
    "jwt",
    "oauth2",
    "mfa",
    "security",
    "rbac",
    "api-keys"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory"
]
packages = [
    { include = "auth_advanced" }
]
include = [
    "manifest.json",
    "README.md",
    "LICENSE",
    "migrations/**/*",
    "templates/**/*"
]

[tool.poetry.dependencies]
python = "^3.11"
# Note: nexus-framework is expected to be installed separately
# nexus-framework = "^2.0.0"

# JWT and Security
pyjwt = "^2.8.0"
cryptography = "^41.0.7"

# Password Hashing
bcrypt = "^4.1.2"

# Multi-Factor Authentication (MFA)
pyotp = "^2.9.0"
qrcode = { extras = ["pil"], version = "^7.4.2" }

# Session Management
redis = "^5.0.1"
itsdangerous = "^2.1.2"

# Rate Limiting
slowapi = "^0.1.9"

# Validation
validators = "^0.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
faker = "^22.0.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
bandit = "^1.7.6"
safety = "^3.0.1"

[tool.poetry.group.oauth]
optional = true

[tool.poetry.group.oauth.dependencies]
# OAuth2 Support
authlib = "^1.3.0"
httpx = "^0.26.0"

[tool.poetry.group.email]
optional = true

[tool.poetry.group.email.dependencies]
# Email Verification
emails = "^0.6.1"
jinja2 = "^3.1.3"

[tool.poetry.group.database]
optional = true

[tool.poetry.group.database.dependencies]
# Database drivers - install based on your database choice
asyncpg = { version = "^0.29.0", optional = true }  # PostgreSQL
aiomysql = { version = "^0.2.0", optional = true }  # MySQL
motor = { version = "^3.3.2", optional = true }     # MongoDB

[tool.poetry.extras]
oauth = ["authlib", "httpx"]
email = ["emails", "jinja2"]
postgresql = ["asyncpg"]
mysql = ["aiomysql"]
mongodb = ["motor"]
all = ["authlib", "httpx", "emails", "jinja2", "asyncpg", "aiomysql", "motor"]

[tool.poetry.scripts]
auth-migrate = "auth_advanced.scripts.migrate:main"
auth-create-admin = "auth_advanced.scripts.create_admin:main"
auth-generate-secret = "auth_advanced.scripts.generate_secret:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool Configurations

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
exclude = [
    "tests/",
    "migrations/"
]

[[tool.mypy.overrides]]
module = [
    "pyotp.*",
    "qrcode.*",
    "redis.*",
    "slowapi.*",
    "authlib.*",
    "emails.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=auth_advanced",
    "--cov-report=term-missing",
    "--asyncio-mode=auto"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "requires_db: Tests requiring database",
    "requires_redis: Tests requiring Redis"
]

[tool.coverage.run]
source = ["auth_advanced"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used
